# YC-fiction_parse

./: .env.example  .gitignore  ADVANCED_FEATURES.md  Makefile  PROJECT_SUMMARY.md  README.md  USAGE.md  pyproject.toml
deployments/docker/: Dockerfile  docker-compose.yml
deployments/k8s/: api-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  worker-deployment.yaml
docs/: DEEP_ANALYSIS.md
scripts/: demo.py  setup.sh
src/: __init__.py
src/application_layer/api/: __init__.py  main.py
src/application_layer/api/routes/: admin.py  deep_analysis.py  novels.py  search.py  tasks.py
src/common/: deep_schemas.py  exceptions.py  logger.py  schemas.py
src/config/: settings.py
src/data_layer/: __init__.py  benchmark_repository.py  cache.py  models.py  mongo_client.py  repositories.py  storage.py
src/processing_layer/: __init__.py  batch_processor.py  cache_optimizer.py  deep_pipeline.py  pipeline.py
src/processing_layer/deep_extractors/: character_extractor.py  commercial_extractor.py  deep_fusion_engine.py  narrative_extractor.py  setting_extractor.py  story_core_extractor.py
src/processing_layer/extractors/: __init__.py  ai_engine.py  rule_engine.py
src/processing_layer/fusion/: __init__.py  result_fusion.py
src/processing_layer/local_models/: llamacpp_client.py  model_manager.py  vllm_client.py
src/processing_layer/parsers/: __init__.py  base.py  epub_parser.py  epub_parser_v2.py  mobi_parser.py  mobi_parser_v2.py  txt_parser.py
src/service_layer/: celery_app.py  monitoring.py
src/service_layer/tasks/: parse_tasks.py
src/vector_store/: base.py  faiss_store.py  milvus_store.py  vector_service.py
tests/: test_parsers.py  test_rule_engine.py
