[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "novel-parser"
version = "0.1.0"
description = "小说反向解析系统 - 将非结构化小说文本转化为结构化特征库"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.25"}
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pymongo = "^4.6.1"
motor = "^3.3.2"
redis = "^5.0.1"

# AI/ML
openai = "^1.10.0"
transformers = "^4.37.0"
torch = "^2.1.0"
sentence-transformers = "^2.2.2"
langchain = "^0.1.0"
langchain-openai = "^0.0.5"

# Text Processing
jieba = "^0.42.1"
ebooklib = "^0.18"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.4"
pypdf = "^4.0.0"

# Task Queue
celery = {extras = ["redis"], version = "^5.3.6"}
flower = "^2.0.1"

# Monitoring & Logging
prometheus-client = "^0.19.0"
structlog = "^24.1.0"
sentry-sdk = "^1.40.0"

# Utils
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiofiles = "^23.2.1"
tenacity = "^8.2.3"
httpx = "^0.26.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
click = "^8.1.7"
rich = "^13.7.0"
typer = "^0.9.0"

# Vector DB
pymilvus = "^2.3.6"
faiss-cpu = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
httpx = "^0.26.0"
factory-boy = "^3.3.0"
faker = "^22.6.0"

[tool.poetry.scripts]
novel-parser = "src.cli:main"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
